...



        <fragment
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/fragment_nearby_hospital"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_top"
            android:layout_marginLeft="@dimen/margin_left"
            android:layout_weight="1"
            android:layout_marginRight="@dimen/margin_right"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>


        <Button
            android:id="@+id/button_get_nearby_hospitals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:text="Nearby Hospitals"
            android:layout_gravity="right"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:background="@drawable/find_map_button"
            android:layout_marginRight="@dimen/margin_right"

            android:textSize="13dp" />
...
