<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill"


    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/title_name_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"

        android:layout_marginTop="29dp"
        android:fontFamily="monospace"
        android:text="Medical Book"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
        android:id="@+id/subheading_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Record your journey!"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_name_main" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title_name_main"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/new_cycle_logo"
        android:contentDescription="TODO" />







    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="175dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/qr_dashboard" />

                <Button
                    android:id="@+id/button_safe_entry"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="#000000"
                    android:layout_below="@id/imageView3"
                    android:layout_centerHorizontal="true"
                    android:onClick="launchSafeEntry"
                    android:text="@string/button_safe_entry"
                     />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    app:srcCompat="@drawable/hospital_dashboard" />

                <Button
                    android:id="@+id/button_nearby_hospitals"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textColor="#000000"
                    android:layout_below="@id/imageView4"
                    android:layout_centerHorizontal="true"
                    android:onClick="launchMap"
                    android:text="@string/button_nearest_hospital"
                     />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        app:srcCompat="@drawable/yoga_dashboard" />

                    <Button
                        android:id="@+id/button_yoga_instructor"
                        style="@style/Widget.AppCompat.Button.Borderless"

                        android:layout_width="136dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView5"
                        android:layout_centerHorizontal="true"
                        android:onClick="launchYogaInstructor"

                        android:text="@string/button_yoga_instructor"
                        android:textColor="#000000" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"
                        app:srcCompat="@drawable/record_dashboard" />

                    <Button
                        android:id="@+id/button_daily_record"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="139dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView6"
                        android:layout_centerHorizontal="true"

                        android:onClick="launchDailyNotes"
                        android:text="@string/button_daily_record"
                        android:textColor="#000000" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_parent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_left"
                        android:layout_marginTop="@dimen/margin_top"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/temperature"
                        android:textColor="@color/black"

                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/temperature_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top"
                        android:layout_marginRight="@dimen/margin_right"

                        android:layout_marginBottom="5dp"
                        android:layout_toRightOf="@id/temperature"
                        android:text="@string/temperature"
                        android:textColor="@color/custom"

                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/temperature"
                        android:layout_marginLeft="@dimen/margin_left"
                        android:layout_marginRight="5dp"
                        android:text="@string/humudity"
                        android:textColor="@color/black"

                        android:textSize="14sp" />


                    <TextView
                        android:id="@+id/humidity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/temperature"

                        android:layout_marginRight="@dimen/margin_right"
                        android:layout_marginBottom="5dp"
                        android:layout_toRightOf="@id/humidity"
                        android:text="@string/temperature"
                        android:textColor="@color/custom"

                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/humidity"
                        android:layout_centerHorizontal="true"
                        android:layout_marginLeft="@dimen/margin_left"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="@dimen/margin_right"
                        android:layout_marginBottom="@dimen/margin_bottom"

                        android:fontFamily="serif"

                        android:text="@string/suggestion"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <ImageView
                        android:id="@+id/weather_image"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="55dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="@dimen/margin_right"


                        tools:srcCompat="@tools:sample/avatars" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>




</ScrollView>